--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2015-2020
         Air Quality Analysis —
         <a href="https://www.linkedin.com/in/drishti-chakarvarty-44b199289/" class="text-gray-600 ml-1" rel="noopener noreferrer"
-          target="_blank">@drishtichakarvarty</a>
+          target="_blank">@AnshikaPatel</a>
       </p>
       <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
         
